@@ -8,13 +8,25 @@
 
 <project name="matlabcommand" default="checkmatlab">
   <description>
-  Provides MATLAB task.
+  MATLAB command task. Open MATLAB, invoke your command, which may
+  consist of several commands, close MATLAB again.
+
   Use &lt;import&gt; to include matlabcommand in your Ant script. Then use the
   matlabcommand task in your build targets. Provide a matlab.exec property to
-  the matlab.bat location you want matlabcommand to use. If no such property is
-  given, matlabcommand will try to call the MATLAB version that is on the cmd shell
-  search path. If no MATLAB executable could be found there, you will know by
-  means of a very ugly Java stack trace.
+  the &lt;matlabroot&gt;/bin/win64/MATLAB.exe location you want to use
+  (change to win32 for 32-bit MATLAB).
+  Alternatively, provide a matlab.root property, only referencing the MATLAB
+  directory. If none of these properties is given,
+  matlabcommand will try to call the MATLAB version that is on the cmd shell
+  search path.
+
+  You can only do this once in the same Ant session. In fact, you can execute
+  the matlabcommand task as many times you want, but only with the same
+  matlab.exec/matlab.root configuration within this session.
+  This is in effect from the time either the matlabcommand task, or
+  the checkmatlab target executes for the first time. You input property
+  (matlab.exec or matlab.root) need to be defined at that time.
+
   The matlabcommand task takes these attributes:
 
     - "command.string" The MATLAB command string to execute. Mandatory.
@@ -28,7 +40,9 @@
     
   You may use the included checkmatlab target as dependency for your targets.
   checkmatlab raises an Ant runtime error if you specified a matlab.exec property
-  that refers to a non-existant file.
+  that refers to a non-existant file, or if you specified a matlab.root property
+  that is not a proper MATLAB's root directory, or if you specified none of
+  these and MATLAB could not be found on the cmd shell search path.
   </description>
 
   <!-- Macro that opens MATLAB and calls a specified command.
@@ -46,20 +60,16 @@
 
     <sequential>
         <property name="error.signature" value="MATLAB threw error"/>
-        <!-- try to use matlab on cmd/shell path if no executable given -->
-        <condition property="matlab.exec" value="matlab.bat">
-          <not>
-            <isset property="matlab.exec"/>
-          </not>
-        </condition>
+        <construct-matlab-exec/>
+        <echo message="Using MATLAB: ${matlab.exec}"/>
 
-        <!-- Calling MATLAB by means of its batch startup files, no output will
-             be given on the console. We do not want to enforce people only
-             referencing the MATLAB.exe, so we do not use the outputproperty
-             attribute. Instead, we let MATLAB write its output into a log file
-             and query its contents. If the MATLAB.exe is used, however, then
-             some options may not be recognized (-wait) and the output may
-             appear several times. -->
+        <!-- Calling MATLAB by means of its core executable, e.g.
+             matlabroot/bin/win32/matlab.exe, not a delegate executable, e.g.
+             matlabroot/bin/matlab.exe or matlab.bat.
+             We let MATLAB write its output into a log file
+             and query its contents in order to determine execution failure.
+             This makes it independent from Ant's logging mechanism and also
+             routes the output through Ant's stdout. -->
         <exec executable="${matlab.exec}" logError="true">
           <!-- by default: spawn="false" failonerror="false" -->
           <arg value="-automation"/>
@@ -67,7 +77,7 @@
           <arg value="-nodesktop"/>
           <!-- We may actually have that jvm at a later time... -->
           <!--arg value="-nojvm"/  yields options conflict with, presumably, -automation-->
-          <!--arg value="-wait"/  not supported under Windows-->
+          <!-- -wait option only valid for delegate executables -->
           <arg value="-r"/>
           <arg value="addpath('@{command.dir}');try;@{command.string};catch;err=lasterror;disp('${error.signature}');disp(err.message);end;exit;"/>
           <arg value="-logfile"/>
@@ -84,10 +94,86 @@
             <contains string="${@{output.property}}" substring="${error.signature}"/>
           </not>
         </condition>
+    </sequential>
+  </macrodef>
 
-        <!-- echo output on console to be logged in ${antlog} as well -->
-        <!-- only necessary when calling matlab.bat, not matlab.exe -->
-        <!--echo message="${@{output.property}}"/-->
+
+  <macrodef name="get-matlab-from-path">
+    <sequential>
+      <!-- get matlab.exe from path, use this rather than the "where" cmd, in
+           order to also work on Windows XP -->
+      <exec executable="cmd.exe" outputproperty="delegator.matlab.exec">
+        <arg value="/C"/>
+        <arg value="for %i in (matlab.exe) do @echo.%~$PATH:i"/>
+      </exec>
+    </sequential>
+  </macrodef>
+
+
+  <!-- Looks for a matlab.root property if available, or defines one from the
+       system path if not. Then defines a matlab.exec property.
+       Can only use this once in the same Ant environment,
+       but not again in the same session with different values. -->
+  <macrodef name="construct-matlab-exec">
+    <sequential>
+
+        <condition property="user.defined.matlab.root" value="true">
+            <isset property="matlab.root"/>
+        </condition>
+
+        <get-matlab-from-path/>
+        
+        <!-- construct a matlab.root property, if not given by the user -->
+        <dirname property="matlab.root" file="${delegator.matlab.exec}"/>
+
+        <property name="matlabroot.bin.win32.exec" location="${matlab.root}/bin/win32/MATLAB.exe"/>
+        <condition property="matlab.exec" value="${matlabroot.bin.win32.exec}">
+            <available file="${matlabroot.bin.win32.exec}" type="file"/>
+        </condition>
+
+        <property name="matlabroot.bin.win64.exec" location="${matlab.root}/bin/win64/MATLAB.exe"/>
+        <condition property="matlab.exec" value="${matlabroot.bin.win64.exec}">
+            <available file="${matlabroot.bin.win64.exec}" type="file"/>
+        </condition>
+
+        <property name="matlabroot.win32.exec" location="${matlab.root}/win32/MATLAB.exe"/>
+        <condition property="matlab.exec" value="${matlabroot.win32.exec}">
+            <available file="${matlabroot.win32.exec}" type="file"/>
+        </condition>
+
+        <property name="matlabroot.win64.exec" location="${matlab.root}/win64/MATLAB.exe"/>
+        <condition property="matlab.exec" value="${matlabroot.win64.exec}">
+            <available file="${matlabroot.win64.exec}" type="file"/>
+        </condition>
+
+        <property name="matlabroot.exec" location="${matlab.root}/MATLAB.exe"/>
+        <condition property="matlab.exec" value="${matlabroot.exec}">
+            <available file="${matlabroot.exec}" type="file"/>
+        </condition>
+
+        <fail message="Could not find MATLAB. No matlab.exec property was given. A matlab.root property was given, but was not a valid MATLAB root directory: '${matlab.root}'.">
+          <condition>
+            <and>
+              <not>
+                <isset property="matlab.exec"/>
+              </not>
+              <isset property="user.defined.matlab.root"/>
+            </and>
+          </condition>
+        </fail>
+
+        <fail message="Could not find MATLAB. No matlab.exec property was given. Also, no matlab.root property was given, and MATLAB could not be found on the path.">
+          <condition>
+            <and>
+              <not>
+                <isset property="matlab.exec"/>
+              </not>
+              <not>
+                <isset property="user.defined.matlab.root"/>
+              </not>
+            </and>
+          </condition>
+        </fail>
     </sequential>
   </macrodef>
 
@@ -95,21 +181,19 @@
   <!-- Targets -->
 
   <target name="checkmatlab" description="Asserts that matlab.exec property is valid.">
-    <!-- fail if matlab.executable is given, but not available -->
-    <fail message="MATLAB executable was not defined. Define matlab.exec property and run again.">
+
+    <construct-matlab-exec/>
+
+    <!-- fail if matlab.exec is given or could be constructed, but not available -->
+    <fail message="MATLAB executable was established, but could not be found: matlab.exec=&quot;${matlab.exec}&quot;">
       <condition>
-        <not>
+        <and>
           <isset property="matlab.exec"/>
-        </not>
-      </condition>
-    </fail>
-    <fail message="MATLAB executable was defined but could not be found: matlab.exec=&quot;${matlab.exec}&quot;">
-      <condition>
-        <not>
-          <available file="${matlab.exec}" type="file"/>
-        </not>
+          <not>
+            <available file="${matlab.exec}" type="file"/>
+          </not>
+        </and>
       </condition>
     </fail>
   </target>
 </project>
-
